fixed z-index on the pager

--- a/public/sites/all/themes/jarbrain/css/global.css.less
+++ b/public/sites/all/themes/jarbrain/css/global.css.less
@@ -665,6 +665,7 @@ ul.nice-menu {
 		display: 	none;
 		@media all and @breakpoint-narrow-plus {
 			display: 	inherit;
+			z-index: 1000;
 		}
 		bottom:		15px;
 		left:		15px;
